--- a/styles/global.css
+++ b/styles/global.css
@@ -39,3 +39,17 @@ a:hover {
 h1, h2, h3 {
   font: inherit;
 }
+
+.container {
+  max-width: 1280px;
+  padding-inline: 20px;
+  margin-inline: auto;
+}
+
+.grid {
+  display: grid;
+}
+
+.grid-flow-column {
+  grid-auto-flow: column;
+}
