--- a/styles/global.css
+++ b/styles/global.css
@@ -40,10 +40,18 @@ h1, h2, h3 {
   font: inherit;
 }
 
+img {
+  max-width: 100%;
+}
+
 .container {
   max-width: 1280px;
   padding-inline: 20px;
   margin-inline: auto;
+}
+
+main {
+  margin-top: 40px;
 }
 
 .grid {
@@ -52,4 +60,16 @@ h1, h2, h3 {
 
 .grid-flow-column {
   grid-auto-flow: column;
+}
+
+.content-tag {
+  display: inline-block;
+  background-color: var(--brand-color-dark);
+  padding: 4px 8px;
+  border-radius: 4px;
+  font: 500 10px/1.2 var(--font-family);
+  text-transform: uppercase;
+  letter-spacing: 0.04em;
+  color: var(--text-color-primary);
+  box-shadow: 0px 4px 16px rgba(2, 6, 23, 0.251);
 }
